--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Data Science Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Scientist Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Welcome to My Data Science Portfolio!</h1>
-  <p>My name is Your Name, and I'm a data scientist.</p>
+    <header>
+        <h1>Your Name - Data Scientist</h1>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            Hello! My name is Your Name, and I'm an aspiring data scientist with a passion for turning data into insights. I have a strong background in statistics, programming, and data visualization.
+        </p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>R</li>
+            <li>SQL</li>
+            <li>Machine Learning</li>
+            <li>Data Visualization</li>
+        </ul>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Short description of your project.</p>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Short description of your project.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: your_email@example.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">your-linkedin-profile</a></p>
+        <p>GitHub: <a href="https://github.com/your-github-profile" target="_blank">your-github-profile</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; Your Name - Data Scientist Portfolio</p>
+    </footer>
 </body>
 </html>
