--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Scientist Portfolio</title>
+    <title>Project Showcase</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,45 +11,18 @@
         <h1>Your Name - Data Scientist</h1>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Hello! My name is Your Name, and I'm an aspiring data scientist with a passion for turning data into insights. I have a strong background in statistics, programming, and data visualization.
-        </p>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>R</li>
-            <li>SQL</li>
-            <li>Machine Learning</li>
-            <li>Data Visualization</li>
-        </ul>
-    </section>
-
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
+        <div class="project-card">
+            <img src="project1-thumbnail.jpg" alt="Project 1 Thumbnail">
             <h3>Project 1</h3>
-            <p>Short description of your project.</p>
         </div>
-        <div class="project">
+        <div class="project-card">
+            <img src="project2-thumbnail.jpg" alt="Project 2 Thumbnail">
             <h3>Project 2</h3>
-            <p>Short description of your project.</p>
         </div>
+        <!-- Add more project cards as needed -->
     </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your_email@example.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">your-linkedin-profile</a></p>
-        <p>GitHub: <a href="https://github.com/your-github-profile" target="_blank">your-github-profile</a></p>
-    </section>
-
-    <footer>
-        <p>&copy; Your Name - Data Scientist Portfolio</p>
-    </footer>
 </body>
 </html>
+
