--- a/index.html
+++ b/index.html
@@ -3,26 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Showcase</title>
+    <title>Sarat Sirirachatapong - Data Scientist</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name - Data Scientist</h1>
+        <h1>Sarat Sirirachatapong (シリラチャタポン サラット) - Data Scientist</h1>
     </header>
 
+    <section id="resume">
+        <h2>Profile</h2>
+<p>
+    Highly motivated and results-driven data scientist with a unique blend of international experience, strong analytical, problem-solving, and communication skills. Proficient in English, Thai, and Japanese (Business level [N2]), setting me apart from local candidates. Adept at leveraging advanced machine learning techniques and data analysis to drive business performance. Passionate about delivering innovative, data-driven solutions to complex real-world problems. Actively seeking opportunities to contribute my skills and knowledge to the Japanese market.
+</p>
+
+<h2>Experience</h2>
+<div class="experience">
+    <h3>Data Scientist</h3>
+    <h4>Nielsen Holdings PCL, Bangkok, Thailand</h4>
+    <p>February 2021 - May 2021</p>
+    <ul>
+        <li>Designed and implemented advanced predictive models using machine learning techniques, including scikit-learn, pandas, and NumPy, to enhance business performance and address client challenges</li>
+        <li>Communicated complex data insights through clear and concise visualizations and presentations for clients and internal team members</li>
+        <li>Conducted training sessions and provided ongoing support to clients in the effective use of Nielsen’s proprietary software tools</li>
+    </ul>
+</div>
+<!-- Add more experiences as needed -->
+
+<h2>Education</h2>
+<div class="education">
+    <h3>Intensive Data Science Bootcamp</h3>
+    <h4>Le Wagon, Tokyo, Japan</h4>
+    <p>April 2023 - June 2023</p>
+    <ul>
+        <li>Completed a comprehensive and rigorous data science program, mastering critical skills and tools such as Python, SQL, Pandas, machine learning, deep learning, and MLOps</li>
+        <li>Gained hands-on experience in data analysis, decision science, machine learning engineering, and cloud-based solutions through practical assignments and projects</li>
+        <li>Successfully collaborated with a team on a real-world data science project, applying cutting-edge techniques and tools to deliver valuable insights and actionable results</li>
+    </ul>
+</div>
+<!-- Add more education as needed -->
+
+<h2>Skills</h2>
+<ul class="skills">
+    <li>Data Analysis: Python, SQL, Pandas, NumPy, Jupyter Notebook</li>
+    <li>Machine Learning: Scikit-learn, TensorFlow, Keras, Deep Learning, XGBoost</li>
+    <li>Data Visualization: Matplotlib, Seaborn, Tableau, Plotly</li>
+    <li>Decision Science: Statsmodels, Multivariate Regression, Hypothesis Testing</li>
+    <li>MLOps: Google Cloud, MLflow, Prefect, Docker, Fast API, Streamlit</li>
+    <li>Languages: English (Native), Thai (Native), Japanese (Business level [N2])</li>
+</ul>
+
+<h2>Contact</h2>
+<p>Email: <a href="mailto:sarat.fin@gmail.com">sarat.fin@gmail.com</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/saratsiri/" target="_blank">https://www.linkedin.com/in/saratsiri/</a></p>
+
+
+    </section>
+
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="project-card">
-            <img src="project1-thumbnail.jpg" alt="Project 1 Thumbnail">
-            <h3>Project 1</h3>
-        </div>
-        <div class="project-card">
-            <img src="project2-thumbnail.jpg" alt="Project 2 Thumbnail">
-            <h3>Project 2</h3>
-        </div>
-        <!-- Add more project cards as needed -->
+        <!-- Add your project cards here -->
     </section>
 </body>
 </html>
-
