--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section id="projects">
-        <!-- Add your project cards here -->
+        <iframe src="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" width="100%" height="800px" frameborder="0"></iframe>
     </section>
 </body>
 </html>
