--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     </section>
 
     <section id="projects">
-        <iframe src="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" width="50%" height="400px" frameborder="0"></iframe>
-    </section>
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Customer Segmentation Analysis</h3>
+            <a href="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" target="_blank">View Project</a>
+        </div>
+        <!-- Add more projects as needed -->
 </body>
 </html>
