--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Sarat Sirirachatapong (シリラチャタポン サラット) - Data Scientist</h1>
     </header>
 
-    <section id="resume">
+    <div class="container">
+        <section id="resume">
         <h2>Profile</h2>
 <p>
     Highly motivated and results-driven data scientist with a unique blend of international experience, strong analytical, problem-solving, and communication skills. Proficient in English, Thai, and Japanese (Business level [N2]), setting me apart from local candidates. Adept at leveraging advanced machine learning techniques and data analysis to drive business performance. Passionate about delivering innovative, data-driven solutions to complex real-world problems. Actively seeking opportunities to contribute my skills and knowledge to the Japanese market.
@@ -60,12 +61,14 @@
 
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Customer Segmentation Analysis</h3>
-            <a href="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" target="_blank">View Project</a>
-        </div>
-        <!-- Add more projects as needed -->
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Customer Segmentation Analysis</h3>
+                <a href="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" target="_blank">View Project</a>
+            </div>
+            <!-- Add more projects as needed -->
+        </section>
+    </div>
 </body>
 </html>
