--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>Customer Segmentation Analysis</h3>
+                   <li>In this project, I used K-Means clustering on e-commerce data to segment customers by sales, purchase recency, and frequency. This analysis helped tailor marketing strategies based on customer behavior, showcasing my expertise in data science and problem-solving for growth-oriented organizations.</li>
+                       
                 <a href="https://nbviewer.org/github/saratsiri/customer-segmentation-analysis/blob/main/Online_Retail_Data_Analysis.ipynb" target="_blank">View Project</a>
             </div>
             <!-- Add more projects as needed -->
