--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 <div class="experience">
     <h3>Data Scientist</h3>
     <h4>Nielsen Holdings PCL, Bangkok, Thailand</h4>
-    <p>February 2021 - May 2021</p>
+    <p>January 2021 - August 2021</p>
     <ul>
-        <li>Designed and implemented advanced predictive models using machine learning techniques, including scikit-learn, pandas, and NumPy, to enhance business performance and address client challenges</li>
-        <li>Communicated complex data insights through clear and concise visualizations and presentations for clients and internal team members</li>
-        <li>Conducted training sessions and provided ongoing support to clients in the effective use of Nielsen’s proprietary software tools</li>
+        <li> Developed and deployed advanced predictive models utilizing machine learning algorithms, including scikit-learn, pandas, and NumPy, to optimize business processes and address client- specific challenges </li>
+        <li> Translated complex data-driven insights into clear and concise visualizations and presentations for diverse audiences, including clients and internal team members </li>
+        <li> Collaborated with cross-functional teams to identify opportunities for data-driven solutions and innovations, leading to improved client satisfaction and increased revenue </li>
+        <li> Streamlined data processing pipelines and implemented best practices in data management to ensure the accuracy, reliability, and accessibility of critical datasets </li>
     </ul>
 </div>
 <!-- Add more experiences as needed -->
@@ -37,21 +38,21 @@
     <h4>Le Wagon, Tokyo, Japan</h4>
     <p>April 2023 - June 2023</p>
     <ul>
-        <li>Completed a comprehensive and rigorous data science program, mastering critical skills and tools such as Python, SQL, Pandas, machine learning, deep learning, and MLOps</li>
-        <li>Gained hands-on experience in data analysis, decision science, machine learning engineering, and cloud-based solutions through practical assignments and projects</li>
-        <li>Successfully collaborated with a team on a real-world data science project, applying cutting-edge techniques and tools to deliver valuable insights and actionable results</li>
+        <li> Engaged in a comprehensive and demanding data science program, excelling in key skills and tools including Python, SQL, Pandas, machine learning (ML), deep learning (DL), and MLOps for end-to- end data-driven solutions </li>
+        <li> Acquired in-depth, hands-on experience in data analysis, decision science, and ML engineering, along with proficiency in cloud-based solutions, through a diverse range of practical assignments and real-world projects </li>
+        <li> Demonstrated exceptional teamwork and communication abilities by collaborating with a team on a high-impact, real-world data science project, effectively utilizing cutting-edge techniques and tools to generate valuable insights and deliver actionable outcomes that drive business performance </li>
     </ul>
 </div>
 <!-- Add more education as needed -->
 
 <h2>Skills</h2>
 <ul class="skills">
-    <li>Data Analysis: Python, SQL, Pandas, NumPy, Jupyter Notebook</li>
-    <li>Machine Learning: Scikit-learn, TensorFlow, Keras, Deep Learning, XGBoost</li>
-    <li>Data Visualization: Matplotlib, Seaborn, Tableau, Plotly</li>
-    <li>Decision Science: Statsmodels, Multivariate Regression, Hypothesis Testing</li>
-    <li>MLOps: Google Cloud, MLflow, Prefect, Docker, Fast API, Streamlit</li>
-    <li>Languages: English (Native), Thai (Native), Japanese (Business level [N2])</li>
+    <li> Data Analysis: Python, SQL, Pandas, NumPy, Jupyter Notebook, SciPy </li>
+    <li> Machine Learning: Scikit-learn, TensorFlow, Keras, Deep Learning, XGBoost </li>
+    <li> Data Visualization: Matplotlib, Seaborn, Plotly </li>
+    <li> Decision Science: Statsmodels, Multivariate Regression, Hypothesis Testing </li>
+    <li> MLOps: Google Cloud, MLflow, Prefect, Docker, Fast API, Streamlit </li>
+    <li> Languages: English (Native), Thai (Native), Japanese (Business level [N2]) </li>
 </ul>
 
 <h2>Contact</h2>
